# openmc

./: .clang-format  .cproject  .git-blame-ignore-revs  .git_archival.txt  .gitignore  .gitmodules  .project  .readthedocs.yaml  .travis.yml  AGENTS.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  ChangeLog  Changelog  DartConfiguration.tcl  Dockerfile  FoX-config.in  GRAVITY_EXPERIMENTAL_BENCHMARKS.md  GRAVITY_IMPLEMENTATION.md  LICENSE  MANIFEST.in  Makefile  Pincell-empty.ipynb  Pincell-solution.ipynb  Pincell.ipynb  README  README.md  RELEASE  arch.make.in  build-deps.sh  build.sh  configure  cross_sections.xml  cross_sections_ascii.xml  cross_sections_serpent.xml  (+36 more)
common/: CMakeLists.txt  m_common_content_model.F90  m_common_notations.F90
common/test/: Makefile  test_fsys_array_str.f90  test_fsys_array_str.out  test_str.f90.in  test_xml_namecheck_1.out  test_xml_namecheck_10.f90  test_xml_namecheck_2.f90  test_xml_namecheck_4.f90  test_xml_namecheck_4.out  test_xml_namecheck_5.f90  test_xml_namecheck_5.out  test_xml_namecheck_6.f90  test_xml_namecheck_7.f90  test_xml_namecheck_9.out
config/: configure.ac  makefile
config/m4/: TW_CHECK_FC_90.m4  TW_CHECK_FC_95.m4  TW_CHECK_FC_FPP_90.m4  TW_CHECK_FC_TR15580.m4  TW_FC_CHECK_EOL.m4  TW_FC_ID.m4  TW_PATH_NETCDF.m4  TW_PROG_CYGPATH_W.m4
cuda_thrust_sort/: CMakeLists.txt  README.md
cuda_thrust_sort/src/: openmc_thrust_sort.cu
dom/: CMakeLists.txt  m_dom_attribute.m4  m_dom_common.m4  m_dom_configuration.m4  m_dom_document_type.m4  m_dom_dom.F90  m_dom_dom.m4  m_dom_entity.m4  m_dom_exception.m4  m_dom_extras.F90  m_dom_namespaces.m4  m_dom_node.m4  m_dom_object.m4  m_dom_parse.f90  m_dom_processing_instruction.m4  m_dom_text.m4  m_dom_utils.f90  m_dom_utils.m4  makefile
dom/test/: Makefile  test.sh  test_dom_getTextContent_1.out  test_dom_getTextContent_1.xml_in  test_dom_getTextContent_3.out  test_dom_getTextContent_4.f90  test_dom_getTextContent_4.out  test_dom_getTextContent_4.xml_in  test_dom_getTextContent_5.xml_in  test_dom_parseString_1.f90  test_dom_parseString_1.out  test_dom_serialize_2.f90
examples/custom_source/: CMakeLists.txt  README.md  build_xml.py  show_flux.py  source_ring.cpp
examples/parameterized_custom_source/: CMakeLists.txt  README.md  build_xml.py  parameterized_source_ring.cpp
examples/serialized_custom_source/: CMakeLists.txt  README.md  build_xml.py  serialized_source_ring.cpp
fsys/: CMakeLists.txt  fox_m_fsys_count_parse_input.F90  fox_m_fsys_count_parse_input.m4  fox_m_fsys_varstr.F90  makefile
hip_thrust_sort/: CMakeLists.txt  README.md
hip_thrust_sort/src/: openmc_thrust_sort.hip
src/: CMakeLists.txt  CMakeListsMustang.txt  CTestConfig.cmake  CTestTestfile.cmake  DEPENDENCIES  DartConfiguration.tcl  Faddeeva.c  Makefile  Makefile.jaguar  OBJECTS  URR_average_cross_sections.F90  URR_constants.F90  URR_cross_sections.F90  URR_edits.F90  URR_endf6.F90  URR_endf6_parser.F90  URR_isotope.F90  URR_openmc_wrapper.F90  URR_probability_table.F90  URR_resonance.F90  URR_settings.F90  URR_vector.F90  aabb.cpp  ace.F90  ace.f90  ace_header.F90  algorithm.F90  angle_distribution.F90  angle_energy.h  angleenergy_header.F90  api.F90  atomic_mass_data.cpp  avg_urr_xs_values.F90  bank.cpp  bank_header.F90  bank_header.f90  bin_grid_partitioner.cpp  binning.cpp  bloch_airy.cpp  boundary_condition.cpp  (+360 more)
src/URR/: URR_edits.F90  URR_faddeeva.F90  URR_interpolate.F90  URR_resonance.F90  URR_tally.F90  urr_xml.py  write_urr_xml.py
src/cmfd/: cmfd_utils.f90
src/cuda/: advance.cu  calculate_xs.cu  collide.cu  cross_surface.cu  refill.cu
src/openmc/: __init__.py  cell.py  cmfd.py  element.py  exceptions.py  filter.py  geometry.py  lattice.py  material.py  mpi.py  nuclide.py  plots.py  plotter.py  region.py  search.py  settings.py  source.py  statepoint.py  summary.py  surface.py  tracks.py  universe.py  volume.py  weight_windows.py
src/pugixml/: pugixml_c.cpp  pugixml_c.hpp  pugixml_f.F90
src/random_ray/: flat_source_domain.cpp  iteration.cpp  linear_source_domain.cpp  moment_matrix.cpp  random_ray.cpp  random_ray_simulation.cpp  ray.cpp  source_region.cpp  symmetric_matrix.cpp  tally_convert.cpp  vtk_plot.cpp
src/relaxng/: cmfd.rnc  cmfd.rng  cross_sections.rnc  cross_sections.rng  geometry.rnc  geometry.rng  materials.rnc  materials.rng  mg_cross_sections.rnc  mg_cross_sections.rng  plots.rnc  plots.rng  readme.rst  settings.rnc  settings.rng  tallies.rnc  tallies.rng
src/tallies/: MyCalcs.cpp  derivative.cpp  filter.cpp  filter_azimuthal.cpp  filter_cell.cpp  filter_cell_instance.cpp  filter_cellborn.cpp  filter_cellfrom.cpp  filter_collision.cpp  filter_delayedgroup.cpp  filter_distribcell.cpp  filter_energy.cpp  filter_energyfunc.cpp  filter_fission_yields.cpp  filter_importance.cpp  filter_legendre.cpp  filter_material.cpp  filter_materialfrom.cpp  filter_mesh.cpp  filter_meshborn.cpp  filter_meshmaterial.cpp  filter_meshsurface.cpp  filter_mu.cpp  filter_musurface.cpp  filter_parent_nuclide.cpp  filter_particle.cpp  filter_polar.cpp  filter_sph_harm.cpp  filter_sptl_legendre.cpp  filter_surface.cpp  filter_time.cpp  filter_timed_mesh.cpp  filter_universe.cpp  filter_weight.cpp  filter_zernike.cpp  sensitivity.cpp  tally.F90  tally.cpp  tally_derivative_header.F90  tally_filter.F90  (+30 more)
src/templates/: Makefile  cmfd.rnc  cmfd_t.xml  cross_sections_t.xml  geometry.rnc  geometry_t.xml  materials.rnc  materials_t.xml  ndpp_lib_t.rnc  ndpp_lib_t.xml  plots.rnc  plots_t.xml  settings.rnc  settings_t.xml  tallies.rnc  tallies_t.xml
src/tests/: Makefile  test_binary_search.f90  test_mesh.f90  test_mesh_cross.f90
src/unittests/: dd_particle_testing_scheme.odp  dd_testing_setup.F90  tally_testing_scheme.odp  test_dd_bins_dict.F90  test_dd_comm.F90  test_dd_distribute_source.F90  test_dd_init.F90  (+7 more)
wkml/: CMakeLists.txt  FoX_wkml.f90  m_wkml_chart.F90  m_wkml_color_def.F90  m_wkml_contours.F90  m_wkml_core.F90  m_wkml_features.F90  m_wkml_styling.F90  rgb2wkml.py
wxml/: CMakeLists.txt  m_wxml_overloads.m4
(+4202 files in other folders)
